# stillfrost

./: .gitignore  .replit  README.md  build.ts  package-lock.json  package.json  pyproject.toml  replit.md  vite.config.ts
attached_assets/: Pasted-Act-as-a-Senior-Frontend-Engineer-and-UI-Designer-speci_1769544397479.txt  Pasted-Stillfrost-2-0-The-Sovereign-Backend-Refactor-Objective_1769556913558.txt  Pasted-The-goal-is-a-Staff-less-Micro-Utility-Factory-Instead-_1769563577215.txt
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: ActionRequired.tsx  AgentTerminal.tsx  CommandPalette.tsx  GlobalNav.tsx  OversightGovernor.tsx  PrincipalDirective.tsx  WorkflowGraph.tsx
client/src/components/studio/: ArchitectureDiagram.tsx  (+14 more)
client/src/pages/: about.tsx  brief.tsx  control.tsx  core.tsx  dashboard.tsx  home.tsx  journal.tsx  monolith.tsx  not-found.tsx  registry.tsx  restricted.tsx
server/: index.ts  routes.ts  storage.ts
server/python_backend/: __init__.py  config.py  main.py  requirements.txt
server/python_backend/agents/: __init__.py  intelligence.py  logic.py  oversight.py  reach.py  systems.py
server/python_backend/audit/: __init__.py  standard.py
server/python_backend/control/: __init__.py  directives.py  notifications.py  pending_actions.py
server/python_backend/feedback/: __init__.py  loop.py
server/python_backend/telemetry/: __init__.py  websocket.py
server/python_backend/twitter/: __init__.py  service.py
server/python_backend/workflows/: __init__.py  investment.py
shared/: schema.ts
shared/models/: tasks.ts
