[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "crewai>=1.9.0",
    "fastapi>=0.128.0",
    "langgraph>=1.0.7",
    "openai>=1.83.0",
    "python-dotenv>=1.1.1",
    "replit>=1.2.11",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
]
